Updated Axis.
svn path=/trunk/eXist-1.0/; revision=87


Former-commit-id: 32938f1fe4d31118b0e614cb09a450485d0d4208