@@ -14,7 +14,8 @@ goto :eof
 
 :gotExistHome
 if not "%JAVA_OPTS%" == "" goto gotJavaOpts
-set JAVA_OPTS=-Xms32000k -Xmx256000k
+set JAVA_ENDORSED_DIRS="%EXIST_HOME%"\lib\endorsed
+set JAVA_OPTS=-Xms32000k -Xmx256000k -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS"
 
 :gotJavaOpts
 %JAVA_HOME%\bin\java %JAVA_OPTS% -Dexist.home=%EXIST_HOME% -jar "%EXIST_HOME%\start.jar" client %1 %2 %3 %4 %5 %6 %7 %8
