@@ -8,6 +8,8 @@ goto :eof
 
 :gotJavaHome
 set _LIBJARS=%CLASSPATH%;exist.jar;%JAVA_HOME%\lib\tools.jar;lib\core\ant.jar;lib\optional\jakarta-regexp-1.2.jar
+set JAVA_ENDORSED_DIRS="%EXIST_HOME%"\lib\endorsed
+set JAVA_OPTS=-Xms32000k -Xmx256000k -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS"
 
 echo eXist Build
 echo -------------------
@@ -16,4 +18,4 @@ echo Building with classpath %_LIBJARS%
 
 echo Starting Ant...
 
-java -classpath %_LIBJARS% org.apache.tools.ant.Main %1 %2 %3 %4 %5
+java %JAVA_OPTS -classpath %_LIBJARS% org.apache.tools.ant.Main %1 %2 %3 %4 %5
